unify the names with {{ env }}

--- a/roles/filetree_create/templates/controller_inventories.j2
+++ b/roles/filetree_create/templates/controller_inventories.j2
@@ -1,7 +1,7 @@
 ---
 controller_inventories:
 {%- raw %}
-  - name: "{{ orgs }} Localhost"
+  - name: "{{ orgs }} {{ env }} Localhost"
     description: "Inventory for the Localhost"
     organization: "{{ orgs }}"
 {% endraw %}
