--- a/roles/filetree_create/templates/controller_projects.j2
+++ b/roles/filetree_create/templates/controller_projects.j2
@@ -1,7 +1,7 @@
 ---
 controller_projects: []
 {%- raw %}
-#   - name: "{{ orgs }} Demo Project"
+#   - name: "{{ orgs }} {{ env }} Demo Project"
 #     description: "Demo Project"
 #     organization: "{{ orgs }}"
 #     scm_type: git
