remove the PAH credentials

--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -1,5 +1,6 @@
 ---
 controller_credentials:
+{#
 {%- raw %}
   - name: "{{ orgs }} {{ env }} Automation Hub Community Repository"
     description: ""
@@ -30,7 +31,7 @@ controller_credentials:
       url: "https://{{ automation_hub }}/api/galaxy/content/rh-certified/"
 {%- raw %}
       token: "ToDo"
-
+#}
   - name: "{{ orgs }} {{ env }} AAP Credential"
     description: "{{ orgs }} {{ env }} Ansible Automation Platform Credential"
     credential_type: "Red Hat Ansible Automation Platform"
@@ -46,7 +47,7 @@ controller_credentials:
     credential_type: "Vault"
     organization: "{{ orgs }}"
     inputs:
-      vault_password: "ToDo"
+      vault_password: "<CHANGE_ME>"
 
   - name: "{{ orgs }} {{ env }} GitLab Credential"
     description: "{{ orgs }} {{ env }} GitLab Credential"
@@ -56,7 +57,7 @@ controller_credentials:
       username: 'aap-demo'
       ssh_key_data: |
         -----BEGIN OPENSSH PRIVATE KEY-----
-        ToDo
+                    <CHANGE_ME>
         -----END OPENSSH PRIVATE KEY-----
 {% endraw %}
 ...
