remove commented parts as they are problematic

--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -1,5 +1,38 @@
 ---
 controller_credentials:
+{#
+{%- raw %}
+  - name: "{{ orgs }} {{ env }} Automation Hub Community Repository"
+    description: ""
+    credential_type: "Ansible Galaxy/Automation Hub API Token"
+    organization: "{{ orgs }}"
+    inputs:
+{% endraw %}
+      url: "https://{{ automation_hub }}/api/galaxy/content/community/"
+{%- raw %}
+      token: "ToDo"
+
+  - name: "{{ orgs }} {{ env }} Automation Hub Published Repository"
+    description: ""
+    credential_type: "Ansible Galaxy/Automation Hub API Token"
+    organization: "{{ orgs }}"
+    inputs:
+{% endraw %}
+      url: "https://{{ automation_hub }}/api/galaxy/content/published/"
+{%- raw %}
+      token: "ToDo"
+
+  - name: "{{ orgs }} {{ env }} Automation Hub RH Certified Repository"
+    description: ""
+    credential_type: "Ansible Galaxy/Automation Hub API Token"
+    organization: "{{ orgs }}"
+    inputs:
+{% endraw %}
+      url: "https://{{ automation_hub }}/api/galaxy/content/rh-certified/"
+{%- raw %}
+      token: "ToDo"
+#}
+{%- raw %}
   - name: "{{ orgs }} {{ env }} AAP Credential"
     description: "{{ orgs }} {{ env }} Ansible Automation Platform Credential"
     credential_type: "Red Hat Ansible Automation Platform"
