set the credentials a little more static

--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -39,8 +39,8 @@ controller_credentials:
     organization: "{{ orgs }}"
     inputs:
       host: "{{ controller_hostname }}"
-      username: "{{ controller_username }}"
-      password: "{{ controller_password }}"
+      username: "<CHANGE_ME>"
+      password: "<CHANGE_ME>"
       verify_ssl: "{{ controller_validate_certs }}"
 
   - name: "{{ orgs }} {{ env }} Vault Credential"
